...
        editPageCountButton
      }
    }
  }

  private var pagesTitle: some View {
    Text("Pages")
      .font(.karla(.title3).weight(.semibold))
      .foregroundStyle(theme.foreground)
      .accessibilityAddTraits(.isHeader)
  }

  private var editPageCountButton: some View {
...
